--- a/BimbotUI/ResultsPanel.xaml
+++ b/BimbotUI/ResultsPanel.xaml
@@ -14,50 +14,51 @@
             <RowDefinition Height="3"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <ListView x:Name="issuesList" Grid.Row="0" SelectionChanged="IssuesList_SelectionChanged" MouseDoubleClick="IssuesList_DoubleClick" ItemsSource="{Binding ResultItems}">
+        <ListView x:Name="issuesList" Grid.Row="0" SelectionMode="Single"
+                    MouseDoubleClick="IssuesList_DoubleClick" HorizontalContentAlignment="Stretch"
+                    ItemsSource="{Binding Path=ResultItems, Mode=OneWay}" >
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="auto" />
-                            <RowDefinition Height="auto" />
-                            <RowDefinition Height="auto" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="1*" />
-                        </Grid.ColumnDefinitions>
-                        <Grid Grid.RowSpan="3" MaxWidth="75" MaxHeight="60" HorizontalAlignment="Stretch">
-                            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                                <Image Source="{Binding Path = issueData.Viewpoints[0].SnapshotRef}" RenderOptions.BitmapScalingMode="HighQuality"  Stretch="UniformToFill" />
+                        <WrapPanel>
+                            <Image MaxWidth="75" MaxHeight="60" Source="{Binding IssueData.Viewpoints[0].SnapshotRef}" 
+                                    RenderOptions.BitmapScalingMode="HighQuality" Stretch="UniformToFill" />
+                            <StackPanel VerticalAlignment="Stretch">
+                                <TextBlock Margin="5,0,0,5" FontWeight="Bold" Text="{Binding Path=Name}" />
+                                <TextBlock Margin="5,0,0,2" Text="{Binding Path=OfService.Name}" />
+                                <TextBlock Margin="5,0,0,0"  Text="{Binding Path=LastRun, StringFormat='dd MMM yyyy HH:mm'}" />
                             </StackPanel>
-                        </Grid>
-                        <Grid Grid.Row="0" Grid.Column="1">
-                            <Label  Margin="2,2,2,0" VerticalAlignment="Bottom" FontWeight="Bold" Content="{Binding IssueData.Name}" />
-                        </Grid>
-                        <Grid Grid.Row="1" Grid.Column="1">
-                            <Label  Margin="2,2,2,0" VerticalAlignment="Bottom" Content="{Binding IssueData.}" />
-                        </Grid>
-                        <Grid Grid.Row="2" Grid.Column="1">
-                            <Label  Margin="2,2,2,0" VerticalAlignment="Bottom" Content="{Binding OfService}" />
-                        </Grid>
+                        </WrapPanel>
+                        <Separator VerticalAlignment="Bottom" Margin="0" Panel.ZIndex="-1"/>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
         <GridSplitter VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="1" Height="3" Cursor="SizeNS"/>
-        <TextBlock x:Name="textIssue" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         <TabControl x:Name="bcfIssue" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <TabControl.Style>
+                <Style TargetType="TabControl">
+                    <Setter Property="Visibility" Value="Hidden"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SelectedItem.IsBcf, ElementName=issuesList}" Value="false">
+                            <Setter Property="Visibility" Value="Hidden"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding SelectedItem.IsBcf, ElementName=issuesList}" Value="true">
+                            <Setter Property="Visibility" Value="Visible"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TabControl.Style>
             <TabItem Header="Topic">
-                <xctk:PropertyGrid x:Name="topicItems" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsReadOnly="True" ShowSearchBox="False" IsCategorized="True" ShowSummary="false" ShowDescriptionByTooltip="False" ShowSortOptions="False" ShowTitle="False" SelectedPropertyItemChanged="topicItems_SelectedPropertyItemChanged"/>
+                <xctk:PropertyGrid x:Name="topicItems" IsReadOnly="True" 
+                                   SelectedObject="{Binding ElementName=issuesList, Path=SelectedItem.IssueData.Topic}"                                
+                                   ShowSearchBox="False" ShowSummary="false" ShowSortOptions="False" ShowTitle="False"
+                                   SelectedPropertyItemChanged="topicItems_SelectedPropertyItemChanged"/>
             </TabItem>
             <TabItem Header="Comments">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="22"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <ComboBox x:Name="commentCombo" Height="22" VerticalAlignment="Top" SelectionChanged="commentCombo_SelectionChanged">
+                <StackPanel>
+                    <ComboBox x:Name="commentCombo" SelectedIndex="0" IsSynchronizedWithCurrentItem="True"
+                              ItemsSource="{Binding ElementName=issuesList, Path=SelectedItem.IssueData.Comment}">
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
@@ -66,16 +67,15 @@
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
-                    <xctk:PropertyGrid Grid.Row="1" x:Name="commentItems" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsReadOnly="True" ShowSearchBox="False" IsCategorized="True" ShowSummary="false" ShowDescriptionByTooltip="False" ShowSortOptions="False" ShowTitle="False"/>
-                </Grid>
+                    <xctk:PropertyGrid x:Name="commentItems"  IsReadOnly="True" 
+                                       SelectedObject="{Binding ElementName=commentCombo, Path=SelectedItem}"
+                                       ShowSearchBox="False" ShowSummary="false" ShowSortOptions="False" ShowTitle="False"/>
+                </StackPanel>
             </TabItem>
             <TabItem Header="Viewpoints">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="22"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <ComboBox Grid.Row="0" x:Name="viewpointCombo" Height="22" VerticalAlignment="Top" Grid.ColumnSpan="2" SelectionChanged="viewpointCombo_SelectionChanged">
+                <StackPanel>
+                    <ComboBox x:Name="viewpointCombo" SelectedIndex="0" IsSynchronizedWithCurrentItem="True"
+                              ItemsSource="{Binding ElementName=issuesList, Path=SelectedItem.IssueData.Viewpoints}">
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
@@ -84,10 +84,29 @@
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
-                    <xctk:PropertyGrid  Grid.Row="1" x:Name="viewpointItems" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsReadOnly="True" ShowSearchBox="False" IsCategorized="True" ShowSummary="false" ShowDescriptionByTooltip="False" ShowSortOptions="False" ShowTitle="False" Grid.ColumnSpan="2"/>
-                </Grid>
+                    <xctk:PropertyGrid x:Name="viewpointItems" IsReadOnly="True" 
+                                       SelectedObject="{Binding ElementName=viewpointCombo, Path=SelectedItem}"
+                                       ShowSearchBox="False" ShowSummary="false" ShowSortOptions="False" ShowTitle="False"/>
+                </StackPanel>
             </TabItem>
         </TabControl>
+        <ScrollViewer Grid.Row="2" Margin="2" Panel.ZIndex="-1">
+            <ScrollViewer.Style>
+                <Style TargetType="ScrollViewer">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SelectedItem.IsTxt, ElementName=issuesList}" Value="true">
+                            <Setter Property="Visibility" Value="Visible"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding SelectedItem.IsTxt, ElementName=issuesList}" Value="false">
+                            <Setter Property="Visibility" Value="Hidden"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ScrollViewer.Style>
+            <TextBlock x:Name="textIssue" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  
+                   Text="{Binding ElementName=issuesList, Path=SelectedItem.TextData}" TextWrapping="Wrap" >
+            </TextBlock>
+        </ScrollViewer>
     </Grid>
 </Page>
 
