--- a/BimbotUI/ServiceAddWindow.xaml
+++ b/BimbotUI/ServiceAddWindow.xaml
@@ -26,7 +26,7 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <ListView Grid.Row="0" Grid.ColumnSpan="2" HorizontalContentAlignment="Stretch" Margin="2" SelectionChanged="SetButtonState" ItemsSource="{Binding AvailableServices, Mode=OneWay}" SelectedItem="{Binding CurrentService}">
+                <ListView x:Name="serviceList" Grid.Row="0" Grid.ColumnSpan="2" HorizontalContentAlignment="Stretch" Margin="2" ItemsSource="{Binding AvailableServices, Mode=OneWay}" SelectedItem="{Binding CurrentService}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Grid Margin="2">
@@ -44,7 +44,7 @@
                                 <StackPanel Grid.Column="2">
                                     <WrapPanel  HorizontalAlignment="Left">
                                         <Ellipse Fill="{Binding Provider.RegisteredColor }" HorizontalAlignment="Left" Height="8" Stroke="Black" VerticalAlignment="Top" Width="8" Margin="2"/>
-                                        <Label Padding="0" FontSize="8" Content="Authorized"/>
+                                        <Label Padding="0" FontSize="8" Content="Registered"/>
                                     </WrapPanel>
                                     <WrapPanel Grid.Row="1" Grid.Column="2" HorizontalAlignment="left">
                                         <Ellipse Fill="{Binding RunningColor}" HorizontalAlignment="Left" Height="8" Stroke="Black" VerticalAlignment="Top" Width="8" Margin="2"/>
@@ -61,13 +61,25 @@
                 </ListView>
 
                 <Button Grid.Row="1" Grid.Column="0" Width="100" Margin="2" HorizontalAlignment="Left" Click="RefreshButton_Click">Refresh list</Button>
-                <Button x:Name="ButtonAuthorize" Grid.Row="1" Grid.Column="1" Width="100" Margin="2" HorizontalAlignment="Right" Click="buttonAuthorize_Click">Authorize</Button>
+                <Button x:Name="ButtonAuthorize" Grid.Row="1" Grid.Column="1" Width="100" Margin="2" HorizontalAlignment="Right" Click="buttonAuthorize_Click">
+                    Authorize
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="IsEnabled" Value="True" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding SelectedIndex, ElementName=serviceList}" Value="-1" >
+                                    <Setter Property="IsEnabled" Value="False" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
                 <Label Grid.Row="2" Grid.Column="0">Trigger:</Label>
-                <ComboBox x:Name="newTrigger" Grid.Row="2" Grid.Column="1" Margin="2" SelectionChanged="SetButtonState"/>
+                <ComboBox x:Name="newTrigger" Grid.Row="2" Grid.Column="1" Margin="2"/>
                 <Label Grid.Row="3" Grid.Column="0">Token:</Label>
-                <TextBox x:Name="newToken" Grid.Row="3" Grid.Column="1"  Margin="2" TextChanged="SetButtonState"/>
+                <TextBox x:Name="newToken" Grid.Row="3" Grid.Column="1"  Margin="2"/>
                 <Label Grid.Row="4" Grid.Column="0">Ifc Export config:</Label>
-                <ComboBox x:Name="newConfiguration" Grid.Row="4" Grid.Column="1" Margin="2" SelectionChanged="SetButtonState">
+                <ComboBox x:Name="newConfiguration" Grid.Row="4" Grid.Column="1" Margin="2">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -77,7 +89,28 @@
                     </ComboBox.ItemTemplate>
                 </ComboBox>
                 <Button Grid.Row="5" Grid.Column="1"  Margin="2" Width="100" HorizontalAlignment="Center" IsCancel="True">Cancel</Button>
-                <Button x:Name="ButtonAdd" Grid.Row="5" Grid.Column="1"  Margin="2" Width="100" HorizontalAlignment="Right" IsDefault="True" Click="AddServiceClick">Add service</Button>
+                <Button x:Name="ButtonAdd" Grid.Row="5" Grid.Column="1"  Margin="2" Width="100" HorizontalAlignment="Right" IsDefault="True" Click="AddServiceClick">
+                    Add service
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="IsEnabled" Value="True" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding SelectedIndex, ElementName=serviceList}" Value="-1" >
+                                    <Setter Property="IsEnabled" Value="False" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding SelectedIndex, ElementName=newTrigger}" Value="-1" >
+                                    <Setter Property="IsEnabled" Value="False" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding Text, ElementName=newToken}" Value="" >
+                                    <Setter Property="IsEnabled" Value="False" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding SelectedIndex, ElementName=newConfiguration}" Value="-1" >
+                                    <Setter Property="IsEnabled" Value="False" />
+                                </DataTrigger>                                
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
             </Grid>
         </GroupBox>
         <GroupBox Grid.Column="1" Header="Filter Services" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
